--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   >
                 </li>
                 <li>
-                  <a
+                  <a target=”_blank”
                     class="button"
                     href="https://www.salesforce.com/trailblazer/yelmahfoudi"
                     >TrailHead</a
