--- a/index.html
+++ b/index.html
@@ -90,9 +90,10 @@
                   >
                 </li>
                 <li>
-                  <a target=”_blank”
+                  <a
                     class="button"
                     href="https://www.salesforce.com/trailblazer/yelmahfoudi"
+                    target="_blank"
                     >TrailHead</a
                   >
                 </li>
@@ -100,6 +101,7 @@
                   <a
                     class="button"
                     href="https://www.linkedin.com/in/yasser-elmahfoudi-69b754114/"
+                    target="_blank"
                     >LinkedIn</a
                   >
                 </li>
@@ -142,7 +144,7 @@
           <div class="header__title-container container">
             <h1 class="header__heading">
               Hi there, my name is
-              <a href="https://www.linkedin.com/in/yasser-elmahfoudi-69b754114/"
+              <a href="https://www.linkedin.com/in/yasser-elmahfoudi-69b754114/" target="_blank"
                 ><span>Yasser</span>.
                 <img
                   src="content/header-Yasser.jpeg"
@@ -151,7 +153,7 @@
                   alt="Photography of Yasser El Mahfoudi"
               /></a>
               I'm a
-              <a href="https://github.com/Skyseras"
+              <a href="https://github.com/Skyseras" target="_blank"
                 ><span>Web/Mobile Developer</span>
                 <img
                   src="content/Github.png"
@@ -160,7 +162,7 @@
                   alt="Image of Github Profile"
               /></a>
               and
-              <a href="https://www.salesforce.com/trailblazer/yelmahfoudi"
+              <a href="https://www.salesforce.com/trailblazer/yelmahfoudi" target="_blank"
                 ><span>Salesforce Consultant</span>
                 <img
                   width="800"
@@ -169,7 +171,7 @@
                   alt="Image of Trailhead profile"
               /></a>
               based in
-              <a href="https://www.saltinourhair.com/morocco/"
+              <a href="https://www.saltinourhair.com/morocco/" target="_blank"
                 ><span>Morocco</span>.
                 <img
                   width="800"
@@ -339,7 +341,7 @@
               <div class="text-block lead formatted">
                 <p style="text-align: justify">
                   This section of my profile website links to my 2nd month
-                  <a href="https://github.com/Skyseras/Alx_Project"
+                  <a href="https://github.com/Skyseras/Alx_Project" target="_blank"
                       >Portfolio</a>.
                       <ul>
                         <li>
@@ -376,13 +378,16 @@
                   thoughts, findings and recommendations on
                   <a
                     href="https://www.linkedin.com/in/yasser-elmahfoudi-69b754114/"
+                    target="_blank"
                     >LinkedIn</a
                   >. You can also take a quick tour on my
                   <a href="https://www.salesforce.com/trailblazer/yelmahfoudi"
+                    target="_blank"
                     >Trailhead</a
                   >
                   profile or find a small selection of my previous projects on
-                  <a href="https://github.com/Skyseras">Github</a>.
+                  <a href="https://github.com/Skyseras"
+                    target="_blank">Github</a>.
                 </p>
               </div>
             </div>
@@ -421,6 +426,7 @@
             <a
               class="link"
               href="https://www.salesforce.com/trailblazer/yelmahfoudi"
+              target="_blank"
               >TrailHead</a
             >
           </li>
@@ -428,6 +434,7 @@
             <a
               class="link"
               href="https://www.linkedin.com/in/yasser-elmahfoudi-69b754114/"
+              target="_blank"
               >LinkedIn</a
             >
           </li>
