--- a/index.html
+++ b/index.html
@@ -345,11 +345,11 @@
                       >Portfolio</a>.
                       <ul>
                         <li>
-                          + A link to my team's Month 2 project video on
+                          + A link to my Team’s Phase 2 project video on
                           YouTube.
                         </li>
                         <li>
-                          + A link to a Google Slide of my team's Month 2 project slide
+                          + A link to a Google Slide of my Team’s Phase 2 project slide
                           deck.
                         </li>
                       </ul>
@@ -377,7 +377,7 @@
                   or hit me up via social media. I occasionally share my
                   thoughts, findings and recommendations on
                   <a
-                    href="https://www.linkedin.com/in/yasser-elmahfoudi-69b754114/"
+                    href="https://www.linkedin.com/in/yasser-elmahfoudi-se-developer/"
                     target="_blank"
                     >LinkedIn</a
                   >. You can also take a quick tour on my
